fix: added final and private access modificators